--- a/src/style/layout/_navigation.scss
+++ b/src/style/layout/_navigation.scss
@@ -1,16 +1,19 @@
 .navigation {
   width: 100vw;
-  height: 20vh;
+  height: 15vh;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
+  position: fixed;
+  z-index: 100;
+  top: 0;
 
   &__logo {
-    width: 20%;
+    width: 50%;
     & > img {
+      cursor: pointer;
       width: 40%;
       height: 40%;
-      margin-bottom: 1.3rem;
     }
   }
 
@@ -21,6 +24,7 @@
     &__link {
       padding: 1.5rem;
       font-size: 1.5rem;
+      cursor: pointer;
     }
   }
 }
