--- a/src/style/layout/_about.scss
+++ b/src/style/layout/_about.scss
@@ -1,18 +1,41 @@
+.about-container {
+  width: calc(100% - 5px);
+  height: 75vh;
+  display: flex;
+  justify-content: center;
+  max-height: 700px;
+}
+
 .about {
-  @include section;
+  width: 100%;
+  height: 100%;
+  padding-left: 5px;
+  max-width: 1200px;
 
   &__title {
     & > h3 {
+      margin-left: 100px;
       @include title();
 
       &::before {
-        @include beforeTitle("O nas");
+        @include beforeTitle("Hackathon");
       }
     }
   }
 
+  &__desc {
+    display: flex;
+    justify-content: center;
+    margin-top: 6rem;
+    text-align: center;
+
+    & > span {
+      width: 600px;
+    }
+  }
+
   &__grid {
-    margin: 10rem 35vw 0 0;
+    margin: 5rem 0 0 0;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 
@@ -23,12 +46,45 @@
         border-radius: 50%;
         padding: 3rem;
         font-size: 2rem;
+        color: white;
       }
 
       & > h4 {
         font-size: 2rem;
-        line-height: 0;
       }
     }
+  }
+}
+
+@media (max-width: 1000px) {
+
+  .about__title {
+    & > h3 {
+      position: relative;
+      line-height: 1;
+      margin-left: 10px;
+
+      &::before {
+        display: none;
+      }
+    }
+  }
+
+  .about-container {
+    max-height: none;
+    height: auto;
+  }
+
+  .about__desc {
+    font-size: 24px;
+  }
+
+  .about__grid {
+    margin: 5rem 0 0 0;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .about__grid__box {
+    font-size: 24px;
   }
 }
