--- a/src/style/layout/_navigation.scss
+++ b/src/style/layout/_navigation.scss
@@ -1,30 +1,65 @@
-.navigation {
-  width: 100vw;
-  height: 15vh;
+.navigation-container {
+  width: 100%;
+  height: 10vh;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: center;
   position: fixed;
   z-index: 100;
   top: 0;
+  background-color: white;
+  box-shadow: 0 0 10px gray;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  max-width: 1920px;
 
   &__logo {
     width: 50%;
     & > img {
       cursor: pointer;
-      width: 40%;
-      height: 40%;
+      width: 290px;
+      height: 100px;
     }
   }
 
   &__links {
-    list-style-type: none;
     display: flex;
+    padding-right: 50px;
+    overflow-x: auto;
 
     &__link {
       padding: 1.5rem;
       font-size: 1.5rem;
       cursor: pointer;
+
+      a {
+        text-decoration: none;
+        display: inline-block;
+        position: relative;
+      }
+
     }
+  }
+}
+
+@media (max-width: 1000px) {
+  .navigation__links {
+    width: 100%;
+    padding-right: 0;
+    justify-content: space-evenly;
+  }
+
+  .navigation__links__link {
+    text-align: center;
+    width: auto;
+    padding: 5px;
+  }
+
+  .navigation__logo {
+    display: none;
   }
 }
