--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -18,6 +18,6 @@ body {
 
 // 4. Layout-related sections
 @import "./layout/navigation", "./layout/home", "./layout/about",
-  "./layout/program", "./layout/organizers", "./layout/footer";
+  "./layout/program", "./layout/organizers", "./layout/footer", "./layout/whyisworth";
 
 // 5. Page-specific styles
