--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,7 +17,7 @@ body {
 @import "./components/button";
 
 // 4. Layout-related sections
-@import "./layout/navigation", "./layout/home", "./layout/about",
+@import "./layout/navigation", "./layout/home", "./layout/about", "./layout/join",
   "./layout/program", "./layout/organizers", "./layout/footer", "./layout/whyisworth";
 
 // 5. Page-specific styles
