--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,7 +14,7 @@ body {
 @import "base/reset", "base/typography";
 
 // 3. Components
-@import "./components/button";
+@import "./components/button", './components/burger';
 
 // 4. Layout-related sections
 @import "./layout/navigation", "./layout/home", "./layout/about", "./layout/join",
