--- a/src/style/layout/_join.scss
+++ b/src/style/layout/_join.scss
@@ -4,7 +4,7 @@
   min-height: 50vh;
   justify-content: center;
   align-items: center;
-  background: url(../img/background_join.jpg) no-repeat;
+  background: url("../img/background_join.jpg") no-repeat;
   background-position-x: center;
   margin-bottom: 150px;
 }
