--- a/src/style/layout/_navigation.scss
+++ b/src/style/layout/_navigation.scss
@@ -42,7 +42,7 @@
     overflow-x: auto;
 
     &__link {
-      padding: 1.5rem;
+      padding: 0 0.7rem 0 0.7rem;
       font-size: 1.5rem;
       cursor: pointer;
 
