--- a/src/style/layout/_join.scss
+++ b/src/style/layout/_join.scss
@@ -6,7 +6,7 @@
   align-items: center;
   background: url("../img/background_join.jpg") no-repeat;
   background-position-x: center;
-  margin-bottom: 150px;
+  margin-bottom: 100px;
 }
 
 .join {
@@ -39,7 +39,7 @@
       font-size: 1.5rem;
       padding: 1rem 1.5rem 1rem 1.5rem;
       width: auto;
-      height: 1.7rem;
+      min-height: 1.7rem;
     }
   }
 }
@@ -58,6 +58,5 @@
     &__btn {
       margin-top: 20px;
     }
-
   }
 }
