--- a/src/style/layout/_join.scss
+++ b/src/style/layout/_join.scss
@@ -39,7 +39,7 @@
       font-size: 1.5rem;
       padding: 1rem 1.5rem 1rem 1.5rem;
       width: auto;
-      min-height: 1.7rem;
+      height: auto;
     }
   }
 }
