--- a/src/style/layout/_navigation.scss
+++ b/src/style/layout/_navigation.scss
@@ -45,6 +45,7 @@
       padding: 0 0.7rem 0 0.7rem;
       font-size: 1.5rem;
       cursor: pointer;
+      text-align: center;
 
       a {
         text-decoration: none;
